[package]
name = "weldr"
version = "0.1.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]

build = "build.rs"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
futures = "0.3.5"
hyper = "0.13.7"
hyper-tls = "0.4.3"
hyper-timeout = "0.3.1"
native-tls = "0.2.4"
tokio-core = "0.1.17"
tokio-io = "0.1.13"
tokio-service = "0.1.0"
tokio-timer = "0.2.13"
libc = "0.2.74"
nix = "0.18.0"
clap = "2.33.1"
capnp = "0.13.3"
capnp-rpc = "0.13.1"
net2 = "0.2.34"
serde = "1.0.114"
serde_json = "1.0.57"
serde_derive = "1.0.114"

[build-dependencies]
capnpc = "0.13.1"

[[bin]]
name = "weldr"
path = "src/weldr.rs"

[[bin]]
name = "test-server"
path = "src/test-server.rs"
